[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/UI/Misc/gold_price.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Misc/shop_select.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Misc/shopslot-price.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Misc/shopslot-bg.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Fonts/UI-Font8.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/UI/ShopItem.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 62, 14 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 62, 0, 62, 14 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 124, 0, 62, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 186, 0, 62, 14 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="ShopItem" type="AspectRatioContainer"]
margin_right = 60.0
margin_bottom = 12.0
mouse_filter = 1
alignment_horizontal = 0
script = ExtResource( 7 )

[node name="Selector" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
frames = SubResource( 5 )
playing = true
centered = false
offset = Vector2( -1, -1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 104.0
margin_bottom = 12.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureButton" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource( 5 )

[node name="HBox" type="HBoxContainer" parent="HBoxContainer/TextureRect"]
margin_top = 2.0
margin_right = 36.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="HBoxContainer/TextureRect/HBox"]
margin_bottom = 8.0

[node name="Icon" type="TextureRect" parent="HBoxContainer/TextureRect/HBox"]
margin_left = 4.0
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/TextureRect/HBox"]
margin_left = 16.0
margin_right = 34.0
margin_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "Name"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 82.0
margin_bottom = 12.0
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/TextureRect2/HBoxContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 10.0
margin_bottom = 10.0
size_flags_vertical = 4
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="HBoxContainer/TextureRect2/HBoxContainer"]
margin_left = 11.0
margin_top = 2.0
margin_right = 15.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 6 )
text = "0"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
margin_left = 86.0
margin_right = 104.0
margin_bottom = 12.0
texture = ExtResource( 4 )

[node name="Stock" type="Label" parent="HBoxContainer/TextureRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="HBoxContainer/TextureRect" to="." method="_on_TextureRect_toggled"]
